tests/baselines/reference/inheritedFunctionAssignmentCompatibility(strict=true).errors.txt
inheritedFunctionAssignmentCompatibility.ts(5,5): error TS7006: Parameter 'a' implicitly has an 'any' type.
inheritedFunctionAssignmentCompatibility.ts(5,8): error TS7006: Parameter 'b' implicitly has an 'any' type.
inheritedFunctionAssignmentCompatibility.ts(6,14): error TS7006: Parameter 'a' implicitly has an 'any' type.
inheritedFunctionAssignmentCompatibility.ts(6,17): error TS7006: Parameter 'b' implicitly has an 'any' type.


==== inheritedFunctionAssignmentCompatibility.ts (4 errors) ====
    interface IResultCallback extends Function { }
    
    function fn(cb: IResultCallback) { }
    
    fn((a, b) => true);
        ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
           ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
    fn(function (a, b) { return true; })
                 ~
!!! error TS7006: Parameter 'a' implicitly has an 'any' type.
                    ~
!!! error TS7006: Parameter 'b' implicitly has an 'any' type.
    
    